Fixed width on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 
 .container {
     width: 21rem;
+    max-width: 90%;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
